--- a/package.json
+++ b/package.json
@@ -28,10 +28,13 @@
     "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^11.0.1",
     "@nestjs/swagger": "^11.2.1",
+    "@prisma/adapter-pg": "^7.0.1",
     "@prisma/client": "^6.17.1",
+    "@prisma/config": "^7.0.1",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/multer": "^2.0.0",
     "@types/nodemailer": "^7.0.3",
+    "@types/pg": "^8.15.6",
     "axios": "^1.13.1",
     "bcrypt": "^6.0.0",
     "class-validator": "^0.14.2",
@@ -41,6 +44,7 @@
     "nodemailer": "^7.0.10",
     "otp": "^2.0.1",
     "otplib": "^12.0.1",
+    "pg": "^8.16.3",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
     "swagger-ui-express": "^5.0.1"
