--- a/package.json
+++ b/package.json
@@ -19,36 +19,35 @@
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
-  "dependencies": {
-    "@nestjs/axios": "^4.0.1",
-    "@nestjs/common": "^11.0.1",
-    "@nestjs/config": "^4.0.2",
-    "@nestjs/core": "^11.0.1",
-    "@nestjs/jwt": "^11.0.1",
-    "@nestjs/mapped-types": "*",
-    "@nestjs/platform-express": "^11.0.1",
-    "@nestjs/swagger": "^11.2.1",
-    "@prisma/adapter-pg": "^7.0.1",
-    "@prisma/client": "^6.17.1",
-    "@prisma/config": "^7.0.1",
-    "@types/jsonwebtoken": "^9.0.10",
-    "@types/multer": "^2.0.0",
-    "@types/nodemailer": "^7.0.3",
-    "@types/pg": "^8.15.6",
-    "axios": "^1.13.1",
-    "bcrypt": "^6.0.0",
-    "class-validator": "^0.14.2",
-    "device-detector-js": "^3.0.3",
-    "jsonwebtoken": "^9.0.2",
-    "multer": "^2.0.2",
-    "nodemailer": "^7.0.10",
-    "otp": "^2.0.1",
-    "otplib": "^12.0.1",
-    "pg": "^8.16.3",
-    "reflect-metadata": "^0.2.2",
-    "rxjs": "^7.8.1",
-    "swagger-ui-express": "^5.0.1"
-  },
+ "dependencies": {
+  "@nestjs/axios": "^4.0.1",
+  "@nestjs/common": "^11.0.1",
+  "@nestjs/config": "^4.0.2",
+  "@nestjs/core": "^11.0.1",
+  "@nestjs/jwt": "^11.0.1",
+  "@nestjs/mapped-types": "*",
+  "@nestjs/platform-express": "^11.0.1",
+  "@nestjs/serve-static": "^5.0.4",
+  "@nestjs/swagger": "^11.2.1",
+  "@prisma/client": "6.19.0",
+  "@types/jsonwebtoken": "^9.0.10",
+  "@types/multer": "^2.0.0",
+  "@types/nodemailer": "^7.0.3",
+  "@types/pg": "^8.15.6",
+  "axios": "^1.13.1",
+  "bcrypt": "^6.0.0",
+  "class-validator": "^0.14.2",
+  "device-detector-js": "^3.0.3",
+  "jsonwebtoken": "^9.0.3",
+  "multer": "^2.0.2",
+  "nodemailer": "^7.0.10",
+  "otp": "^2.0.1",
+  "otplib": "^12.0.1",
+  "pg": "^8.16.3",
+  "reflect-metadata": "^0.2.2",
+  "rxjs": "^7.8.1",
+  "swagger-ui-express": "^5.0.1"
+},
   "devDependencies": {
     "@eslint/eslintrc": "^3.2.0",
     "@eslint/js": "^9.18.0",
@@ -68,7 +67,7 @@
     "globals": "^16.0.0",
     "jest": "^29.7.0",
     "prettier": "^3.4.2",
-    "prisma": "^6.17.1",
+    "prisma": "6.19.0",
     "source-map-support": "^0.5.21",
     "supertest": "^7.0.0",
     "ts-jest": "^29.2.5",
