--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@nestjs/serve-static": "^5.0.4",
     "@nestjs/swagger": "^11.2.1",
     "@prisma/client": "6.19.0",
+    "@types/cookie-parser": "^1.4.10",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/multer": "^2.0.0",
     "@types/nodemailer": "^7.0.3",
@@ -37,6 +38,7 @@
     "axios": "^1.13.1",
     "bcrypt": "^6.0.0",
     "class-validator": "^0.14.2",
+    "cookie-parser": "^1.4.7",
     "device-detector-js": "^3.0.3",
     "jsonwebtoken": "^9.0.3",
     "multer": "^2.0.2",
